# Geometric

./: CMakeLists.txt  Scene.cpp  Scene.h  SceneElement.h  code.cpp  figure.cpp  figure.h  main.cpp  v2.sln  v2.vcxproj  v2.vcxproj.filters  visitor.cpp  visitor.h
